Fix contrast of error text

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -54,7 +54,7 @@
   --md-secondary-container: var(--color-violet-200);
   --md-on-secondary-container: var(--color-violet-950);
   --md-error: var(--color-red-300);
-  --md-on-error: var(--color-red-50);
+  --md-on-error: var(--color-red-950);
   --md-error-container: var(--color-red-200);
   --md-on-error-container: var(--color-red-950);
   --md-surface-low: var(--color-neutral-900);
